ex8-5
#include <iostream>
using namespace std;

class Base {
  int a;
  protected:
    void setA(int a) { this->a = a;}
  public:
    void showA() { cout << a; }
};

class Derived : protected Base {
  int b;
  protected:
    void setB(int b) { this->b = b; }
  public:
  void showB() { cout << b; }
};

int main() {
  Derived x;    
  x.a = 5;        // X
  x.setA(10);     // X
  x.showA();      // X
  x.b = 10;       // X
  x.setB(10);     // X
  x.showB();      // O
} 

/* 결과
 clang++-7 -pthread -std=c++17 -o main main.cpp
main.cpp:22:3: error: cannot cast 'Derived' to its protected base class 'Base'
  x.a = 5;        // X
  ^
main.cpp:12:17: note: declared protected here
class Derived : protected Base {
                ^~~~~~~~~~~~~~
main.cpp:22:5: error: 'a' is a private member of 'Base'
  x.a = 5;        // X
    ^
main.cpp:5:7: note: implicitly declared private here
  int a;
      ^
main.cpp:23:5: error: 'setA' is a protected member of 'Base'
  x.setA(10);     // X
    ^
main.cpp:7:10: note: declared protected here
    void setA(int a) { this->a = a;}
         ^
main.cpp:23:3: error: cannot cast 'Derived' to its protected base class 'Base'
  x.setA(10);     // X
  ^
main.cpp:12:17: note: declared protected here
class Derived : protected Base {
                ^~~~~~~~~~~~~~
main.cpp:24:5: error: 'showA' is a protected member of 'Base'
  x.showA();      // X
    ^
main.cpp:12:17: note: constrained by protected inheritance here
class Derived : protected Base {
                ^~~~~~~~~~~~~~
main.cpp:9:10: note: member is declared here
    void showA() { cout << a; }
         ^
main.cpp:24:3: error: cannot cast 'Derived' to its protected base class 'Base'
  x.showA();      // X
  ^
main.cpp:12:17: note: declared protected here
class Derived : protected Base {
                ^~~~~~~~~~~~~~
main.cpp:25:5: error: 'b' is a private member of 'Derived'
  x.b = 10;       // X
    ^
main.cpp:13:7: note: implicitly declared private here
  int b;
      ^
main.cpp:26:5: error: 'setB' is a protected member of 'Derived'
  x.setB(10);     // X
    ^
main.cpp:15:10: note: declared protected here
    void setB(int b) { this->b = b; }
         ^
8 errors generated.
exit status 1
 */ 